[metadata]
name = pyApp.SQLAlchemy
author = Tim Savage
author-email = tim@savage.company
summary = SQL Alchemy plugin for PyApp.
description-file = README.rst
home-page = https://github.com/timsavage/pyapp.sqlalchemy
license = BSD
classifier =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Libraries :: Application Frameworks
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

keywords =
    application
    framework

[files]
packages =
    pyapp_sqlalchemy

[bdist_wheel]
universal = 1
